Rework the sample XAML a bit

--- a/SampleApp/SampleApp/MainPage.xaml
+++ b/SampleApp/SampleApp/MainPage.xaml
@@ -6,13 +6,16 @@
              mc:Ignorable="d"
              x:Class="SampleApp.MainPage">
 
-    <StackLayout BackgroundColor="Black">
-        <!-- Place new controls here -->
-        <Label Text="Welcome to Xamarin.Forms!" 
-           HorizontalOptions="Center"
-           VerticalOptions="CenterAndExpand" TextColor="White" />
+	<StackLayout BackgroundColor="Black">
+		<Grid>
+			<!-- Place new controls here -->
+			<Label Text="Welcome to Xamarin.Forms!" 
+			   HorizontalOptions="Center"
+			   VerticalOptions="CenterAndExpand" TextColor="White" />
 
-		<Image Source="camera.png" HeightRequest="44" WidthRequest="44" />
+			<Image Source="loginbg.png" HeightRequest="123" WidthRequest="105" />
+			<Image Source="camera.png" HeightRequest="44" WidthRequest="44" />
+		</Grid>
 	</StackLayout>
 
 </ContentPage>
