--- a/Resizetizer.NT/Rules/ProjectItemsSchema.xaml
+++ b/Resizetizer.NT/Rules/ProjectItemsSchema.xaml
@@ -1,26 +1,24 @@
-﻿<?xml version="1.0" encoding="UTF-8"?>
+﻿<?xml version="1.0" encoding="UTF-8" ?>
 <ProjectSchemaDefinitions xmlns="http://schemas.microsoft.com/build/2009/properties">
 
     <ContentType
         Name="SharedImage"
         DisplayName="Resizetizer.NT Shared Image"
-        ItemType="SharedImage">
-    </ContentType>
+        ItemType="SharedImage" />
 
     <ContentType
         Name="SharedFont"
         DisplayName="Resizetizer.NT Font"
-        ItemType="SharedFont">
-    </ContentType>
+        ItemType="SharedFont" />
 
 
     <ItemType Name="SharedImage" DisplayName="Resizetizer.NT Image" />
     <ItemType Name="SharedFont" DisplayName="Resizetizer.NT Font" />
 
     <FileExtension Name=".svg" ContentType="SharedImage" />
-    <FileExtension Name=".otf" ContentType="SharedFont"/>
-    <FileExtension Name=".ttf" ContentType="SharedFont"/>
-    <FileExtension Name=".woff" ContentType="SharedFont"/>
-    <FileExtension Name=".woff2" ContentType="SharedFont"/>
+    <FileExtension Name=".otf" ContentType="SharedFont" />
+    <FileExtension Name=".ttf" ContentType="SharedFont" />
+    <FileExtension Name=".woff" ContentType="SharedFont" />
+    <FileExtension Name=".woff2" ContentType="SharedFont" />
 
 </ProjectSchemaDefinitions>
