--- a/Resizetizer.NT/Rules/SharedImage.xaml
+++ b/Resizetizer.NT/Rules/SharedImage.xaml
@@ -1,10 +1,10 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8" ?>
 <Rule
+    xmlns="http://schemas.microsoft.com/build/2009/properties"
     Name="SharedImage"
-    DisplayName="General"
-    PageTemplate="generic"
     Description="Resizetizer Shared Scalable Vector Graphics"
-    xmlns="http://schemas.microsoft.com/build/2009/properties">
+    DisplayName="General"
+    PageTemplate="generic">
 
     <Rule.Categories>
         <Category Name="Advanced" DisplayName="Advanced" />
@@ -13,55 +13,102 @@
     </Rule.Categories>
 
     <Rule.DataSource>
-        <DataSource Persistence="ProjectFile" HasConfigurationCondition="False" ItemType="SharedImage" />
+        <DataSource
+            HasConfigurationCondition="False"
+            ItemType="SharedImage"
+            Persistence="ProjectFile" />
     </Rule.DataSource>
 
-    <DynamicEnumProperty Name="{}{ItemType}" DisplayName="Build Action"  Category="Advanced"
-                   Description="How the file relates to the build and deployment processes."
-                   EnumProvider="ItemTypes" />
+    <DynamicEnumProperty
+        Name="{}{ItemType}"
+        Category="Advanced"
+        Description="How the file relates to the build and deployment processes."
+        DisplayName="Build Action"
+        EnumProvider="ItemTypes" />
 
 
-    <StringProperty Name="Identity" DisplayName="File Name" ReadOnly="true" Category="Misc">
+    <StringProperty
+        Name="Identity"
+        Category="Misc"
+        DisplayName="File Name"
+        ReadOnly="true">
         <StringProperty.DataSource>
-            <DataSource Persistence="ProjectFile" ItemType="SharedImage" PersistedName="Identity" />
+            <DataSource
+                ItemType="SharedImage"
+                PersistedName="Identity"
+                Persistence="ProjectFile" />
         </StringProperty.DataSource>
     </StringProperty>
 
-    <StringProperty Name="FullPath" DisplayName="Full Path" ReadOnly="true" Category="Misc">
+    <StringProperty
+        Name="FullPath"
+        Category="Misc"
+        DisplayName="Full Path"
+        ReadOnly="true">
         <StringProperty.DataSource>
-            <DataSource Persistence="ProjectFile" ItemType="SharedImage" PersistedName="FullPath" />
+            <DataSource
+                ItemType="SharedImage"
+                PersistedName="FullPath"
+                Persistence="ProjectFile" />
         </StringProperty.DataSource>
     </StringProperty>
 
-    <BoolProperty Name="IsAppIcon" Default="false" DisplayName="Application Icon" Category="ResizetizerNT">
+    <BoolProperty
+        Name="IsAppIcon"
+        Category="ResizetizerNT"
+        Default="false"
+        DisplayName="Application Icon">
         <BoolProperty.DataSource>
-            <DataSource HasConfigurationCondition="False"
-                  ItemType="SharedImage"
-                  PersistedName="IsAppIcon"
-                  Persistence="ProjectFile"
-                  SourceOfDefaultValue="AfterContext" />
+            <DataSource
+                HasConfigurationCondition="False"
+                ItemType="SharedImage"
+                PersistedName="IsAppIcon"
+                Persistence="ProjectFile"
+                SourceOfDefaultValue="AfterContext" />
         </BoolProperty.DataSource>
     </BoolProperty>
 
-    <StringProperty Name="Alias" DisplayName="Image Alias" Category="ResizetizerNT">
+    <StringProperty
+        Name="Alias"
+        Category="ResizetizerNT"
+        DisplayName="Image Alias">
         <StringProperty.DataSource>
-            <DataSource ItemType="SharedImage"
-                  HasConfigurationCondition="False"
-                  PersistedName="Link"
-                  Persistence="ProjectFile"
-                  SourceOfDefaultValue="AfterContext" />
+            <DataSource
+                HasConfigurationCondition="False"
+                ItemType="SharedImage"
+                PersistedName="Link"
+                Persistence="ProjectFile"
+                SourceOfDefaultValue="AfterContext" />
         </StringProperty.DataSource>
     </StringProperty>
 
-    <StringProperty  Name="BaseSize" DisplayName="Image BaseSize" Category="ResizetizerNT" />
+    <StringProperty
+        Name="BaseSize"
+        Category="ResizetizerNT"
+        DisplayName="Image BaseSize" />
 
-    <StringProperty  Name="TintColor" DisplayName="Image TintColor" Category="ResizetizerNT" />
+    <StringProperty
+        Name="TintColor"
+        Category="ResizetizerNT"
+        DisplayName="Image TintColor" />
 
-    <StringProperty  Name="ForegroundScale" DisplayName="Image Foreground Scale" Category="ResizetizerNT" />
+    <StringProperty
+        Name="ForegroundScale"
+        Category="ResizetizerNT"
+        DisplayName="Image Foreground Scale" />
 
-    <StringProperty  Name="ForegroundFile" DisplayName="Image Foreground File" Category="ResizetizerNT" />
+    <StringProperty
+        Name="ForegroundFile"
+        Category="ResizetizerNT"
+        DisplayName="Image Foreground File" />
+
+    <StringProperty
+        Name="Format"
+        Category="ResizetizerNT"
+        DisplayName="Image Output Format and Parameters" />
 
     <BoolProperty Name="Visible" Visible="false" />
     <StringProperty Name="DependentUpon" Visible="false" />
     <StringProperty Name="Link" Visible="false" />
+
 </Rule>
