--- a/SampleApp/SampleApp/MainPage.xaml
+++ b/SampleApp/SampleApp/MainPage.xaml
@@ -1,21 +1,34 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:d="http://xamarin.com/schemas/2014/forms/design"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             mc:Ignorable="d"
-             x:Class="SampleApp.MainPage">
+<ContentPage
+    x:Class="SampleApp.MainPage"
+    xmlns="http://xamarin.com/schemas/2014/forms"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
 
-	<StackLayout BackgroundColor="Black">
-		<Grid>
-			<!-- Place new controls here -->
-			<Label Text="Welcome to Xamarin.Forms!" 
-			   HorizontalOptions="Center"
-			   VerticalOptions="CenterAndExpand" TextColor="White" />
+    <Grid BackgroundColor="LightGray">
+        <ScrollView>
+            <StackLayout VerticalOptions="Start">
+                <!--  Place new controls here  -->
+                <Label
+                    HorizontalOptions="Center"
+                    Text="Welcome to Xamarin.Forms!"
+                    TextColor="White"
+                    VerticalOptions="Start" />
 
-			<Image Source="loginbg.png" HeightRequest="123" WidthRequest="105" />
-			<Image Source="camera.png" HeightRequest="44" WidthRequest="44" />
-		</Grid>
-	</StackLayout>
+                <Image
+                    HeightRequest="123"
+                    Source="loginbg.png"
+                    WidthRequest="105" />
+                <Image
+                    HeightRequest="44"
+                    Source="camera.png"
+                    WidthRequest="44" />
+
+                <Image
+                    HeightRequest="200"
+                    Source="fullscreen_landscape_best_q.png"
+                    WidthRequest="200" />
+            </StackLayout>
+        </ScrollView>
+    </Grid>
 
 </ContentPage>
