Add ability to override SharedImage from child projects in hierarchy No tests written yet. To be done.

--- a/SampleApp/ExternalFeature/GalleryPage.xaml
+++ b/SampleApp/ExternalFeature/GalleryPage.xaml
@@ -14,7 +14,7 @@
                 Aspect="AspectFit"
                 HeightRequest="250"
                 HorizontalOptions="Center"
-                Source="large_image.jpg"
+                Source="generic_image.jpg"
                 WidthRequest="250" />
 
 
